<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- 添加了一个空的 View 来作为图片和按钮之间的间隔
    控件之间的间距也可以用这个 android:layout_marginBottom="16dp"
    <View
        android:layout_width="match_parent"
        android:layout_height="32dp" />
    -->
    <!--侧边栏容器-->




    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/app_name"
            app:subtitle="副标题"
            app:menu="@menu/top_app_bar"
            app:navigationIcon="@drawable/menu"
            app:navigationIconTint="?colorAccent"/>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Note: A RecyclerView can also be used -->
    <!--Scrollable content  可滚动内容
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="描述：备选方案"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    </androidx.core.widget.NestedScrollView>
    -->




    <!-- LinearLayout，占据其他地方 -->
    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/relative_layout">

        <!-- Add your views inside the LinearLayout here -->
        <!--还没有logo
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="448dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:scaleType="centerInside"
            android:src="@drawable/logo" />
        -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="初学阶段"
            android:textSize="40sp" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/ListenSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/ListenSwitch"
            android:textSize="20sp"
            android:checked="false"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"

            android:backgroundTint="@color/button_background"
            android:text="@string/func_2" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"

            android:text="@string/func_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/func_4" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="This is LinearLayout occupying the remaining space"
            android:layout_gravity="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Tip0"

            />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/relative_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="36dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fabLeft"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"

            android:layout_marginStart="16dp"

            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/mode"
            app:cornerRadius="16dp"

            app:icon="@drawable/settings"
            app:iconGravity="textTop"
            app:iconPadding="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="100dp"
            android:layout_height="100dp"

            android:layout_centerInParent="true"

            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/func_1"
            app:cornerRadius="16dp"

            app:icon="@drawable/send_message"
            app:iconGravity="textTop"
            app:iconPadding="8dp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/fabRight"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"

            android:layout_marginEnd="16dp"

            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="删除"
            app:cornerRadius="16dp"

            app:icon="@drawable/history_clear"
            app:iconGravity="textTop"
            app:iconPadding="8dp" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
